# crazy-email-recv-srv

./: README.md  USAGE.md  cfg.ini  cfg.ini.example  ddd.db  pyproject.toml  test_html_email.py
aemail/: __init__.py  cli.py  config.py  data.py  email_handler.py  server.py  utils.py  web_api.py
aemail/static/: index.html  index_new.html
tests/: __init__.py  test_config.py  test_data.py
